--- a/confusion/style2.css
+++ b/confusion/style2.css
@@ -44,3 +44,50 @@ body{
 .R_B{
 	background-color: Gold;
 }
+
+.tab_content{
+	border-left :1px solid #ddd;
+	border-right:1px solid #ddd;
+	border-bottom :1px solid #ddd;
+	padding : 10px;
+}
+
+.carousel{
+	background:#512DA8;
+}
+.carousel-item{
+	height:300px;
+}
+
+.carousel-item img{
+	position:absolute;
+	top:0;
+	left:0;
+	min-height:300px;
+
+}
+.form-row{
+	min-height: 50px;
+}
+
+.btn-space {
+    margin-right: 5px;
+}
+
+.btn-pad{
+	padding-left: 130px;
+}
+
+#carouselButton{
+	right:0px;
+	position: absolute;
+	bottom:0px;
+}
+
+.mod-head{
+	background-color: #512DAB;
+}
+
+.mod-body{
+	background:#9575CD;
+}
